--- a/public/index.html
+++ b/public/index.html
@@ -84,38 +84,38 @@
                 <div class="current-song-background">
                 </div>
                 <div class="current-song-content">
-                    <div class="artwork">
-                        <img src="https://i.scdn.co/image/8e6e7ebac1d649d5f417d10b3e0284b464a74cd5"/>
-                    </div>
+                        <img class="artwork"src="https://i.scdn.co/image/8e6e7ebac1d649d5f417d10b3e0284b464a74cd5"/>
                     <div class="details">
-                        <div class="song-name">
-                            Feels
-                        </div>
-                        <div class="song-artist">
-                            Calvin Harris, Big Sean
-                        </div>
-
-
-                        <div class='play-status'>
-                            <div id="currentTime">
-                                1:52
+                        <div class="description">
+                            <div class="song-name">
+                                Feels
                             </div>
-                            <div class="statusBar-holder">
-                                <div class="statusBar-empty">
+                            <div class="song-artist">
+                                Calvin Harris, Big Sean
+                            </div>
+                        </div>
+                        <div class="control-status">
+                            <div class='play-status'>
+                                <div id="currentTime">
+                                    1:52
                                 </div>
-                                <div id="statusBar-full">
-                                    <div id="dragDot"></div>
+                                <div class="statusBar-holder">
+                                    <div class="statusBar-empty">
+                                    </div>
+                                    <div id="statusBar-full">
+                                        <div id="dragDot"></div>
+                                    </div>
+                                </div>
+                                <div id="endTime">
+                                    3:57
                                 </div>
                             </div>
-                            <div id="endTime">
-                                3:57
-                            </div>
-                        </div>
-                        <div class="controls-holder">
-                            <div class="controls">
-                                <i class="icon-skip-back"> </i>
-                                <i class="icon-play"> </i>
-                                <i class="icon-skip-forward"> </i>
+                            <div class="controls-holder">
+                                <div class="controls">
+                                    <i class="icon-skip-back"> </i>
+                                    <i class="icon-play"> </i>
+                                    <i class="icon-skip-forward"> </i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -123,51 +123,12 @@
             </div>
             <div class="playlist-holder">
                 <h1> UP NEXT </h1>
-                <ul id="sortable">
+                <ul id="sortable" class="playlist">
                     <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
+                        <img class="artwork" src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
                     </li>
                     <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="artwork">
-                            <img src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                        </div>
+                        <img class="artwork" src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
                     </li>
                 </ul>
             </div>
