--- a/public/index.html
+++ b/public/index.html
@@ -84,14 +84,14 @@
                 <div class="current-song-background">
                 </div>
                 <div class="current-song-content">
-                        <img class="artwork"src="https://i.scdn.co/image/8e6e7ebac1d649d5f417d10b3e0284b464a74cd5"/>
+                        <img class="artwork"src="https://i.scdn.co/image/9e54851f349d1eaf9b7bb3a48ae611c917935750"/>
                     <div class="details">
                         <div class="description">
                             <div class="song-name">
-                                Feels
+                                Mama - offaiah Remix
                             </div>
                             <div class="song-artist">
-                                Calvin Harris, Big Sean
+                                Jonas Blue, William Singe, offaiah
                             </div>
                         </div>
                         <div class="control-status">
@@ -123,13 +123,7 @@
             </div>
             <div class="playlist-holder">
                 <h1> UP NEXT </h1>
-                <ul id="sortable" class="playlist">
-                    <li>
-                        <img class="artwork" src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                    </li>
-                    <li>
-                        <img class="artwork" src="https://i.scdn.co/image/d54d0f0357a6af9e8b01da42a66e342bad332c97"/>
-                    </li>
+                <ul id="sortable" class="playlist queue">
                 </ul>
             </div>
         </div>
