--- a/client-server/public/index.html
+++ b/client-server/public/index.html
@@ -2,7 +2,7 @@
 <head>
   
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Zackify</title>
+    <title>Zaqify</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -23,7 +23,7 @@
 <div class="main">
     <div class="menu-holder">
         <div class="logo-holder">
-            <i class="icon-spotify"></i> ZACKIFY
+            <i class="icon-spotify"></i> ZAQIFY
         </div>    
         <div class="menu-main-holder">
             <ul>
@@ -58,9 +58,12 @@
                 <div id="search-outter">
                     <div class="search-content-holder">
                         <div class="search-bar">
-                            <form action="">
-                                <input type="text" id="query" value="" class="form-control" placeholder="Search"/> 
-                            </form>
+                            <input type="text" id="query" value="" class="form-control" placeholder="Search"/> 
+                        </div>
+                        <div class="track-holder-row">
+                            <h1> Songs </h1>
+                            <ul id="track-list">
+                            </ul>
                         </div>
                         <div class="artist-holder-row">
                             <h1> Artists </h1>
@@ -72,11 +75,7 @@
                             <div id="album-holder-inner">
                             </div>
                         </div>
-                        <div class="track-holder-row">
-                            <h1> Tracks </h1>
-                            <ul id="track-list">
-                            </ul>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -84,20 +83,20 @@
                 <div class="current-song-background">
                 </div>
                 <div class="current-song-content">
-                        <img class="artwork"src="https://i.scdn.co/image/9e54851f349d1eaf9b7bb3a48ae611c917935750"/>
+                        <img class="artwork"src="https://i.scdn.co/image/ae66cbcb48eb496ef4bf6bc38b604e850d2ed68d"/>
                     <div class="details">
                         <div class="description">
                             <div class="song-name">
-                                Mama - offaiah Remix
+                                80's Film
                             </div>
                             <div class="song-artist">
-                                Jonas Blue, William Singe, offaiah
+                                Jon Bellion
                             </div>
                         </div>
                         <div class="control-status">
                             <div class='play-status'>
                                 <div id="currentTime">
-                                    1:52
+                                    2:32
                                 </div>
                                 <div class="statusBar-holder">
                                     <div class="statusBar-empty">
@@ -107,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div id="endTime">
-                                    3:57
+                                    2:57
                                 </div>
                             </div>
                             <div class="controls-holder">
