--- a/client-server/public/index.html
+++ b/client-server/public/index.html
@@ -30,14 +30,14 @@
                 <li id="search">
                     Search <i class="icon-search"></i>
                 </li>
-                <li>
-                    Browse
-                </li>
-                <li>
+                <li id="playlists" style="display:none">
                     Playlists
                 </li>
-                <li>
+                <li id="recent">
                     Recently Played
+                </li>
+                <li id="browse"  style="display:none">
+                        Youtube
                 </li>
             </ul>
         </div>
@@ -78,6 +78,15 @@
 
                     </div>
                 </div>
+                <div id="recent-outter">
+                    <div class="recent-content-holder">
+                        <div class="track-holder-row">
+                            <h1> Songs </h1>
+                            <ul id="recent-track-list">
+                            </ul>
+                        </div>    
+                    </div>
+                </div>
             </div>
             <div class="current-song-holder">
                 <div class="current-song-background">
@@ -96,7 +105,7 @@
                         <div class="control-status">
                             <div class='play-status'>
                                 <div id="currentTime">
-                                    2:32
+                                    0:00
                                 </div>
                                 <div class="statusBar-holder">
                                     <div class="statusBar-empty">
@@ -106,13 +115,14 @@
                                     </div>
                                 </div>
                                 <div id="endTime">
-                                    2:57
+                                    0:00
                                 </div>
                             </div>
                             <div class="controls-holder">
                                 <div class="controls">
                                     <i class="icon-skip-back"> </i>
                                     <i class="icon-play"> </i>
+                                    <i class="icon-pause"> </i>
                                     <i class="icon-skip-forward"> </i>
                                 </div>
                             </div>
